[package]
name = "math_lib"
version = "0.1.0"
authors = ["ElHavas <havasjethi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "math_libr"
path = "src/lib.rs"
edition = "2018"
crate-type = ["lib"]

[dependencies]
# rand = "0.7.3"